--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "ML Dev Container",
   "image": "mcr.microsoft.com/vscode/devcontainers/python:0-3.12",
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "python -m ensurepip --upgrade && python -m pip install --upgrade pip && python -m pip install -r requirements.txt",
   "forwardPorts": [8888, 6006],
   "customizations": {
     "vscode": {
